[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/Experience-Particle.gd" type="Script" id=1]
[ext_resource path="res://Random_Effects/dash_particle.2.test.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[sub_resource type="CircleShape2D" id=2]
radius = 115.017

[node name="Experience-Particle" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.0705882, 0, 0.0509804, 1 )
texture = ExtResource( 2 )

[node name="HitBox" type="Area2D" parent="." groups=["EnergyParticle"]]
collision_layer = 32
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color( 0.568627, 1, 0, 1 )
shape = SubResource( 2 )

[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
